use jquery from cdn instead

--- a/lib/reporter/template.html
+++ b/lib/reporter/template.html
@@ -116,7 +116,7 @@
 
     </section>
     </div>
-    <script src="assets/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
     <script>
     $(function() {
         $(".dd").click(function() {
